objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advocates</fullName>
                </value>
                <value>
                    <fullName>Certain Software User Base</fullName>
                </value>
                <value>
                    <fullName>Clients</fullName>
                </value>
                <value>
                    <fullName>Clients &amp; Prospects</fullName>
                </value>
                <value>
                    <fullName>Community Portal</fullName>
                </value>
                <value>
                    <fullName>Connect App Users</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch List</fullName>
                </value>
                <value>
                    <fullName>CSN Profiles</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect All Invitees</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Attendee</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Exhibitors</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect New Attendee</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Past Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Cvent Connect Previous Attendee</fullName>
                </value>
                <value>
                    <fullName>Ebook Download Leads</fullName>
                </value>
                <value>
                    <fullName>Marketo: Drip Campaign</fullName>
                </value>
                <value>
                    <fullName>Marketo: High Scoring Contacts</fullName>
                </value>
                <value>
                    <fullName>Marketo: Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Marketo: Other</fullName>
                </value>
                <value>
                    <fullName>Mobile Visits</fullName>
                </value>
                <value>
                    <fullName>NA-IR</fullName>
                </value>
                <value>
                    <fullName>Newsletter Subscribers</fullName>
                </value>
                <value>
                    <fullName>onTour App Users</fullName>
                </value>
                <value>
                    <fullName>Partner List</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Planners</fullName>
                </value>
                <value>
                    <fullName>Post Show Leads</fullName>
                </value>
                <value>
                    <fullName>Prospects</fullName>
                </value>
                <value>
                    <fullName>RTP Visitor Segment</fullName>
                </value>
                <value>
                    <fullName>Suppliers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Subject_line__c</fullName>
        <description>Subject line of tasks created for Leads/Contacts in the campaign</description>
        <label>Task Subject line</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Biz-Dev</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>TicketMob</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AEDT</fullName>
                </value>
                <value>
                    <fullName>AEST</fullName>
                </value>
                <value>
                    <fullName>AST</fullName>
                </value>
                <value>
                    <fullName>AWST</fullName>
                </value>
                <value>
                    <fullName>BST</fullName>
                </value>
                <value>
                    <fullName>CET</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>EET</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>GMT</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>HKT</fullName>
                </value>
                <value>
                    <fullName>HT</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>IST</fullName>
                </value>
                <value>
                    <fullName>JST</fullName>
                </value>
                <value>
                    <fullName>KHT</fullName>
                </value>
                <value>
                    <fullName>KST</fullName>
                </value>
                <value>
                    <fullName>MSK</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MYT</fullName>
                </value>
                <value>
                    <fullName>NZT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>SGT</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>WET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_of_Invitee__c</fullName>
        <description>The total number of person to whom invitations sent.</description>
        <label>Total Number of Invitee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Prospects__c</fullName>
        <formula>NumberOfContacts  +  NumberOfLeads- NumberOfConvertedLeads</formula>
        <label>Total Prospects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Prospects_in_Hierarchy__c</fullName>
        <formula>NumberOfLeads  +  NumberOfContacts- NumberOfConvertedLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prospects in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Cost__c</fullName>
        <label>Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Code__c</fullName>
        <label>Venue Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Invoiced_Cost__c</fullName>
        <label>Venue Invoiced Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CampaignVenues</relationshipLabel>
        <relationshipName>CampaignVenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venues_Name__c</fullName>
        <label>Venues Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Third Party Planner</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Government Association Non Profit</fullName>
                </value>
                <value>
                    <fullName>Corporate Government Association Non Profit Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visa_Application_Cost__c</fullName>
        <label>Visa Application Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>campaign_uid__c</fullName>
        <formula>"[" &amp; Event_Code__c &amp; "]" 
&amp; " " 
&amp; "[" &amp; Text(Type) &amp; "]"
&amp; " "
&amp; "[" &amp; Text(Session_Date__c) &amp; "]"
&amp; " " 
&amp; "[" &amp; Text(Start_Time__c)&amp; "]"
&amp; " "
&amp; "[" &amp; Text(Sub_Type__c) &amp; "]"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Sessions__c</fullName>
        <label># of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Email Marketing</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSN_Campaigns</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Total_Prospects__c</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>CSN</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>CSN</value>
        </filters>
        <label>CSN Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>CSNSales</group>
            <group>CSN_Sales_Management_SOPs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSN_Lists_to_Scrub</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Total_Prospects__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Product Seminar(Supp),Tradeshow</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Building List</value>
        </filters>
        <label>CSN Lists to Scrub</label>
        <language>en_US</language>
        <sharedTo>
            <role>Administrator</role>
            <role>DirectSalesCSN</role>
            <role>Marketing_Team</role>
            <role>PreSalesCSN</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eloqua_Campaigns</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>eloqua</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>contains</operation>
            <value>eloqua</value>
        </filters>
        <label>Eloqua Campaigns</label>
        <sharedTo>
            <role>Marketing_Team</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <validationRules>
        <fullName>Update_Mktg_project_for_IR_Campaigns</fullName>
        <active>true</active>
        <description>Mktg Project field to be updated for Campaigns with type 'IR'</description>
        <errorConditionFormula>AND(  ISPICKVAL( Type , "IR")  ,   ISPICKVAL( Project__c , ""), $User.Id &lt;&gt; "005000000077iSP" 

 )</errorConditionFormula>
        <errorMessage>Update Mktg. Project for IR Campaigns</errorMessage>
    </validationRules>
</CustomObject>